--- a/scss/custom/header.scss
+++ b/scss/custom/header.scss
@@ -53,3 +53,33 @@
     padding: 5px 10px 5px 30px;
   }
 }
+
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .header-background{
+    background-color: transparent;
+    background-image: url("/assets/img/homepage.jpg") !important;
+  }
+
+  .header-background:before {
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background: tran­spa­ren­tiz­e($zoetrope-blue, 0.4);
+  }
+}
+
+@supports (-ms-ime-align:auto){
+  .header-background{
+    background-color: transparent;
+    background-image: url("/assets/img/homepage.jpg");
+  }
+
+  .header-background:before {
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background: fade-out($zoetrope-blue, 0.4);
+  }
+}
